# learn-vulkan

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
notes/: GameObject consists of... .md  structure.md  under renderPass.vsdx
src/: Application.cpp  Application.h  Asset.h  AssetManager.cpp  AssetManager.h  Buffer.cpp  BufferHelper.cpp  BufferHelper.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  CMakeSettings.json  Command.cpp  Command.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  FrameBuffer.cpp  FrameBuffer.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Instance.cpp  Instance.h  KeyGen.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  Queue.cpp  Queue.h  RenderPass.cpp  RenderPass.h  Scene.cpp  (+17 more)
src/baseLayer/: Application.cpp  Application.h  BufferHelper.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h  Queue.h  SwapChain.cpp  SwapChain.h
src/common/: CMakeLists.txt  LVECommon.cpp  LVECommon.h
src/game/: CMakeLists.txt  Common.h  Game.h  GameObj.cpp  GameObject.cpp  Mesh.cpp  MeshRenderer.cpp  MeshRenderer.h  Sampler.cpp  Scene.cpp  Test.cpp  Test.h  Texture.cpp  Texture.h  VKContext.cpp
src/gameLayer/: Asset.cpp  AssetManager.cpp  CMakeLists.txt  Component.cpp  Component.h  Descriptor.h  Game.cpp  GameObject.h  Instance.h  KeyGen.cpp  Mesh.h  Sampler.h  Shader.h  Surface.cpp  VKContext.h  Vertex.cpp  main.cpp
src/render_core/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  BufferFactory.cpp  BufferFactory.h  CMakeLists.txt  CommandPool.cpp  CommandPool.h  DescriptorPool.cpp  DescriptorPool.h  Device.cpp  Device.h  Fence.cpp  Fence.h  FrameBuffer.cpp  FrameBuffer.h  Image.cpp  Image.h  ImageFactory.cpp  ImageFactory.h  Instance.cpp  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Sampler.cpp  Sampler.h  Semaphore.cpp  Semaphore.h  Shader.cpp  Shader.h  Surface.cpp  Surface.h  SwapChain.cpp  SwapChain.h  Texture.cpp  (+5 more)
src/shaders/: compile.bat  compile.sh  sh.frag.glsl  sh.vert.glsl  tri.vert.glsl
src/utils/: CMakeLists.txt  DeviceQueueUtil.cpp  DeviceQueueUtil.h  FileUtil.cpp  FileUtil.h  Util.h  ValidationUtil.cpp  ValidationUtil.h
